<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dk.sdu.mmmi.cbse</groupId>
        <artifactId>SpaceProject</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <packaging>jar</packaging>

    <artifactId>Main</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>dk.sdu.mmmi.cbse</groupId>
            <artifactId>Common</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>dk.sdu.mmmi.cbse</groupId>
            <artifactId>Asteroid</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>dk.sdu.mmmi.cbse</groupId>
            <artifactId>Bullets</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>dk.sdu.mmmi.cbse</groupId>
            <artifactId>Player</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>6.2.4</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <skip>false</skip>
                    <executable>java</executable>
                    <arguments>
                        <argument>--enable-native-access=javafx.graphics</argument>
                        <argument>-Dorg.lwjgl.util.Debug=true</argument>
                        <argument>-Djava.library.path=libs</argument>
                        <argument>--module-path=../mods-mvn</argument>
                        <argument>--class-path=libs/*</argument>
                        <argument>--module=Main/dk.sdu.mmmi.cbse.main.Main</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>